reading text : OCR + direct

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^38.2.1"
+  },
+  "dependencies": {
+    "tesseract.js": "^6.0.1"
   }
 }
